--- a/src/orchestrator_config.json
+++ b/src/orchestrator_config.json
@@ -1,6 +1,6 @@
 {
-  "lead_capture": "src.agents.lead_capture_agent.LeadCaptureAgent",
-  "chatbot": "src.agents.chatbot_agent.ChatbotAgent",
-  "crm_pipeline": "src.agents.crm_pipeline_agent.CRMPipelineAgent",
-  "segmentation": "src.agents.segmentation_ad_targeting_agent.SegmentationAdTargetingAgent"
+  "lead_capture": "src.agents.sales.lead_capture_agent.LeadCaptureAgent",
+  "chatbot": "src.agents.sales.chatbot_agent.ChatbotAgent",
+  "crm_pipeline": "src.agents.sales.crm_pipeline_agent.CRMPipelineAgent",
+  "segmentation": "src.agents.sales.segmentation_ad_targeting_agent.SegmentationAdTargetingAgent"
 }
