Add NLP parameter parser and CLI assistant

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,3 +8,4 @@ packages = find:
 [options.entry_points]
 console_scripts =
     brookside-cli = src.cli:main
+    brookside-assistant = src.cli_assistant:main
