Add workflow management endpoints and UI

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ openai>=1.0.0  # optional - used by ChatTool
 google-api-python-client>=2.0.0  # optional - for Google Calendar
 fastapi>=0.110.0  # memory service server
 uvicorn>=0.22.0
+streamlit>=1.30.0
 
