--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ google-api-python-client>=2.0.0  # optional - for Google Calendar
 fastapi>=0.110.0  # memory service server
 uvicorn>=0.22.0
 
+streamlit>=1.0.0
