--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ google-api-python-client>=2.0.0  # optional - for Google Calendar
 fastapi>=0.110.0  # memory service server
 uvicorn>=0.22.0
 PyYAML>=6.0
+pyautogen>=0.2.16
 
