--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 requests>=2.31.0  # optional - tests pass without it
+httpx>=0.27.0  # async REST memory service
 openai>=1.0.0  # optional - used by ChatTool
 google-api-python-client>=2.0.0  # optional - for Google Calendar
 fastapi>=0.110.0  # memory service server
