--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,10 @@ title: Markus Ahling
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
+include:
+  - docs
+defaults:
+  - scope:
+      path: "docs/index.md"
+    values:
+      permalink: /
