--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pre-commit
+          pip install mypy
+      - name: Run mypy
+        run: mypy .
       - name: Run pre-commit
         run: pre-commit run --all-files --show-diff-on-failure
       - name: Run tests
