--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pre-commit
+          pip install mypy
       - name: Run pre-commit
         run: pre-commit run --all-files --show-diff-on-failure
+      - name: Run mypy
+        run: mypy src
       - name: Run tests
         run: pytest -q
